GS-8461 Correcting header_728x90 ad slot showing extra space in IE on perl pages

--- a/src/webapp/res/css/frame.css
+++ b/src/webapp/res/css/frame.css
@@ -29,9 +29,10 @@ body.unframed #pageGS {
 #adLeaderboard {
     background-color: #fff;
     height: 100px;
-    margin:auto;
-    margin-bottom: 10px;
     width: 900px;
+    margin:0 0 6px 0;
+    padding: 7px 0 0 0;
+    text-align: center;
 }
 
 #contentGS {
@@ -41,13 +42,6 @@ body.unframed #pageGS {
     border-top: 1px solid #fff; /* IE hack */
     border-bottom: 1px solid #fff;
     width: 864px;
-}
-
-#adLeaderboard {
-    text-align: center;
-    margin-bottom: 6px;
-    width: 900px;
-    padding: 7px 0px 0px 0px;
 }
 
 #adLeaderboard table {
